[project]
name = "schwab-autoinvest"
version = "0.1.0"
description = "Auto-invest available funds based on pre-configured target allocation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "schwab-py>=1.5.1",
]
